--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,22 @@
 version: 2.1
 
+commands:
+  print_pipeline_id:
+    parameters: 
+      id:
+        type: string  
+    steps:
+      - run: echo << parameters.id >>
+
 jobs:
-  save_hello_world_output:
+  my_job:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo "hello world" > ~/output.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - output.txt
-
-  print_output_file:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run: cat ~/output.txt
-
+      - print_pipeline_id:
+           id: << pipeline.id >>
+         
 workflows:
   my_workflow:
     jobs:
-      - save_hello_world_output
-      - print_output_file:
-          requires:
-            - save_hello_world_output
+      - my_job
