--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,16 @@
 version: 2.1
 
-commands:
-  print_pipeline_id:
-    parameters: 
-      id:
-        type: string  
-    steps:
-      - run: echo << parameters.id >>
-
 jobs:
   my_job:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id:
-           id: << pipeline.id >>
-         
+      - run: exit 1
+      - run:
+          name: on error
+          command: echo "Hello Error!"
+          when: on_fail
+
 workflows:
   my_workflow:
     jobs:
